# cruler

./: .gitignore  Cargo.toml  README.md
header/: cruler.h  cruler_helper.hpp
pack/: configure.toml  extraction_rules.toml  navigation_rules.toml
src/: lib.rs
src/configure/: configure_test.rs  mod.rs
src/connector/: connector_test.rs  connector_utils.rs  mod.rs
src/connector/extractor/: extraction_rules.rs  mod.rs  specific_procedure.rs
src/connector/navigator/: mod.rs  navigation_rules.rs  specific_pager.rs
src/result/: mod.rs  result_test.rs
